# tacit-rs

./: Cargo.toml  README.md
.github/workflows/: main.yml
examples/: explicit.rs  json.rs  simple.rs  threads.rs
src/: lib.rs  logger.rs  properties.rs
src/formatters/: json_formatter.rs  mod.rs  simple_formatter.rs
src/loggers/: json_logger.rs  mod.rs  simple_logger.rs
src/outputs/: mod.rs  simple_console_output.rs
